add names to the header of ml ipy notebook

--- a/ml/main.ipynb
+++ b/ml/main.ipynb
@@ -5,23 +5,9 @@
    "metadata": {},
    "source": [
     "### **In this part we performs basic Exploratory Data Analysis (EDA) on the chosen dataset. It includes data loading, cleaning, visualization, and summary statistics to understand the underlying patterns and relationships within the data.**\n",
-    "---"
+    "---\n",
+    "#### Made by: Yan Marchan, Andrey Patsino, Uladzislau Bandarenka"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
