--- a/ml/main.ipynb
+++ b/ml/main.ipynb
@@ -3942,7 +3942,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's prepare the dataset for regression models. We'll drop unnecessary columns like 'market_hash_name', 'stickers', 'overpay', 'price', and 'id',and split the dataset into features (X) and the target variable (y), which is 'price'. To normalize the input data we'll use MinMaxScaler. The dataset will be split into training (80%) and testing (20%) subsets to evaluate model performance.\n",
+    "Let's prepare the dataset for regression models. We'll drop unnecessary columns like `stickers`, `overpay`, `price`, and `id`,and split the dataset into features (X) and the target variable (y), which is `price`. To normalize the input data we'll use MinMaxScaler. The dataset will be split into training (80%) and testing (20%) subsets to evaluate model performance.\n",
     "Regression models we using:\n",
     "1. `Linear Regression` - Simple baseline model.\n",
     "2. `Lasso` - Adds L1 regularization to improve predictions by reducing less relevant coefficients to zero.\n",
@@ -3973,7 +3973,7 @@
     "from sklearn.metrics import mean_absolute_error, r2_score\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "X = df_no_zeros.drop(columns=['market_hash_name', 'stickers', 'overpay', 'price', 'id'])\n",
+    "X = df_no_zeros.drop(columns=['stickers', 'overpay', 'price', 'id'])\n",
     "y = df_no_zeros['price']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
